--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -92,9 +92,9 @@
 						        ${offerta.modalita?substring(0,500)}...
 						    </#if>
 						</p>
-						<a href="#access-manager-modal" class="w3-button w3-right w3-round far fa-share-square">
+						<label for="access-manager-modal" class="w3-button w3-right w3-round far fa-share-square">
 							Invia proposta
-						</a>
+						</label>
 					 </div>
 				</#list>
 		        
